Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat odit aspernatur et autem eius obcaecati molestias totam sit enim non ex officia sequi, vel animi nostrum, voluptatibus officiis id fugit!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa omnis cumque error maxime ut hic reprehenderit recusandae facilis, repellendus tempore nulla repellat veniam illo, quia corrupti possimus ratione, blanditiis consequatur!</p>
 </body>
 </html>
